--- a/public/16-step-4.html
+++ b/public/16-step-4.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Корзина с товаром</title>
+		<title>Заказ успешно оформлен!</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no">
@@ -24,7 +24,7 @@
 		<link rel="stylesheet" href="libs/ion-rangeslider/css/ion.rangeSlider.min.css"/>
 		<link rel="stylesheet" href="css/main.min.css"/>
 	</head>
-	<body class="inner-page"><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
+	<body><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
 		<div class="main-wrapper">
 			<!-- start HEADER.header-->
 			<header class="header block-with-lazy">
@@ -223,118 +223,41 @@
 				<!-- end top-nav-->
 			</header>
 			<!-- end HEADER.header-->
-			<div class="page-head">
+			<!-- стилизация в main-->
+			<div class="container return-beginning"><a href="#">Вернуться на сайт</a></div>
+			<!-- start s-step4-->
+			<section class="s-step4 section" id="s-step4">
 				<div class="container">
-					<nav aria-label="breadcrumb">
-						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
-									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Доставка и оплата</span>
-									<meta itemprop="position" content="2"/></a></li>
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Взломостойкие сейфы</span>
-									<meta itemprop="position" content="3"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Сейф Aiko T-17 EL</span>
-									<meta itemprop="position" content="4"/></a></li>
-						</ol>
-					</nav>
-					<!-- Стилизация находится в main рядом с breadcrumb-->
-					<div class="text-right back-to-main"> <a href="#">Назад к сейфам</a></div>
-				</div>
-			</div>
-			<!-- start s-prod-head2-->
-			<div class="s-prod-head s-prod-head-basket">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-4 col-md-6">
-							<div class="s-prod-head-images">
-								<div class="s-prod-head-images__inner">
-									<div class="s-prod-head-images__slider s-prod-head-images__slider--lg s-prod-head-images__slider--lg-js">
-										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-									</div>
-									<!-- +e.slider--sm.--sm-js
-									// - for (var x = 0; x < 5; x++)
-										+e.slide
-											+e.img-wrap
-												+img()
-									-->
+					<div class="section-title text-center">
+						<div class="s-step4__title-wrap"><img class="lazy" src="#" data-src="img/svg/tick.svg" alt=""/>
+							<h2>Заказ успешно оформлен!</h2>
+						</div>
+						<div class="s-step4__order-number row justify-content-center">
+							<div class="col-md-4 align-self-center">
+								<h3>№ вашего заказа: <span class="number"><strong>5533</strong></span></h3>
+							</div>
+							<div class="col-md-3 align-self-center">
+								<div class="form-wrap">
+									<form>
+										<input class="order" type="hidden" name="order"/>
+										<button class="form-wrap__btn" type="submit">Перейти к оплате
+										</button>
+									</form>
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6">
-							<h1>Сейф Aiko T-17 EL</h1>
-							<div class="s-prod-head__type">Взломостойкий
+						<h4>Здравствуйте!</h4>
+						<p>Ваш заказ принят в&nbsp;обработку. Скоро мы&nbsp;свяжемся с&nbsp;вами для подтверждения заказа. Если по&nbsp;каким-то причинам мы&nbsp;никак не&nbsp;подтвердили ваш заказ в&nbsp;течение 24&nbsp;часов, пожалуйста, позвоните по&nbsp;номеру&nbsp;<strong><a href="tel:+7(3519)22-00-22">+7 (3519) 22-00-22</a></strong></p>
+						<div class="label">
+							<div class="label__name">Иван
 							</div>
-							<p> <strong>Характеристики</strong></p>
-							<table>
-												<tr>
-													<td>Размер (ВхШхГ):</td>
-													<td><strong>170х260х252 мм</strong></td>
-												</tr>
-												<tr>
-													<td>Внутренний размер (ВхШхГ):</td>
-													<td><strong>170х260х252 мм</strong></td>
-												</tr>
-												<tr>
-													<td>Замки:</td>
-													<td><strong>ключевой</strong></td>
-												</tr>
-												<tr>
-													<td>Вес:</td>
-													<td><strong>7,0 кг</strong></td>
-												</tr>
-												<tr>
-													<td>Объем:</td>
-													<td><strong>3,0 л</strong></td>
-												</tr>
-												<tr>
-													<td>Взломостойкость:</td>
-													<td><strong>S1 класс</strong></td>
-												</tr>
-							</table>
-						</div>
-						<div class="col-lg-4">
-							<div class="s-prod-head-sidebar">
-								<div class="s-prod-head-sidebar__number">
-									<button> </button>
-									<input type="text" placeholder="1"/>
-									<button> </button>
-								</div>
-								<div class="s-prod-head-sidebar__amount">2000 Р
-								</div>
-								<div class="s-prod-head-sidebar__remove">
-									<button> </button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row to-order justify-content-end">
-						<div class="col-lg-3 col-md-6">
-							<h5>Итого без доставки</h5>
-							<h3>2000 Р</h3>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="s-prod-head__checkout">
-								<button>Оформить заказ</button><a href="#">Доставка и оплата</a>
+							<div class="label__prof">специалист компании <br>«Комплексные технологии»
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- end s-prod-head2-->
+			</section>
+			<!-- end s-step4-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="row">
