--- a/public/20-thanks.html
+++ b/public/20-thanks.html
@@ -238,7 +238,7 @@
 				<div class="container">
 					<div class="section-title text-center">
 						<div class="section-title__title-wrap"><img class="lazy" src="#" data-src="img/svg/tick.svg" alt=""/>
-							<h2>Иван, спасибо, мы приняли вашу заявку!</h2>
+							<h2><span class="name">Иван</span>, спасибо, мы приняли вашу заявку!</h2>
 						</div>
 						<p>Специалист компании перезвонит вам в&nbsp;течение рабочего дня и&nbsp;ответит на&nbsp;ваши вопросы. Удачного дня!</p>
 					</div>
