--- a/public/21-thanks2.html
+++ b/public/21-thanks2.html
@@ -234,17 +234,16 @@
 				</div>
 			</div>
 			<!-- start s-thanks-->
-			<div class="s-thanks" id="s-thanks">
+			<section class="s-thanks section" id="s-thanks">
 				<div class="container">
-					<div class="row">
-						<div class="col after-quiz"><img class="lazy check-mark" src="#" data-src="img/svg/tick.svg" alt=""/>
-							<h2>Иван, мы отправили вам подборку сейфов,<br> подходящих под выбранные параметры.</h2>
-							<p>Скидку&nbsp;10% мы&nbsp;закрепили за&nbsp;вашим номером телефона,<br> она действительна в&nbsp;течение 2-х недель.</p><img class="lazy" src="#" data-src="img/@2x/thanks-safes.jpg" alt=""/>
-							<h5>Вы&nbsp;можете в&nbsp;любое время посмотреть сейфы на&nbsp;складе: <br>оценить размеры, попробовать закрыть и&nbsp;открыть замок, задать <br> вопросы&nbsp;&mdash; позвоните и&nbsp;договоритесь о&nbsp;встрече.</h5><a href="tel:+7(3519)22-00-22">+7 (3519) 22-00-22</a>
+					<div class="section-title text-center">
+						<div class="section-title__title-wrap"><img class="lazy" src="#" data-src="img/svg/tick.svg" alt=""/>
+							<h2><span class="name">Иван</span>, спасибо, мы приняли вашу заявку!</h2>
 						</div>
+						<p>Специалист компании перезвонит вам в&nbsp;течение следующего рабочего дня и&nbsp;ответит на&nbsp;ваши вопросы. Удачного дня!</p>
 					</div>
 				</div>
-			</div>
+			</section>
 			<!-- end s-thanks-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
