--- a/public/22-thanks-qwiz.html
+++ b/public/22-thanks-qwiz.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Корзина с товаром</title>
+		<title>Спасибо, мы приняли вашу заявку!</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no">
@@ -24,7 +24,7 @@
 		<link rel="stylesheet" href="libs/ion-rangeslider/css/ion.rangeSlider.min.css"/>
 		<link rel="stylesheet" href="css/main.min.css"/>
 	</head>
-	<body class="inner-page"><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
+	<body><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
 		<div class="main-wrapper">
 			<!-- start HEADER.header-->
 			<header class="header block-with-lazy">
@@ -227,114 +227,25 @@
 				<div class="container">
 					<nav aria-label="breadcrumb">
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Вернуться на сайт</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Доставка и оплата</span>
-									<meta itemprop="position" content="2"/></a></li>
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Взломостойкие сейфы</span>
-									<meta itemprop="position" content="3"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Сейф Aiko T-17 EL</span>
-									<meta itemprop="position" content="4"/></a></li>
 						</ol>
 					</nav>
-					<!-- Стилизация находится в main рядом с breadcrumb-->
-					<div class="text-right back-to-main"> <a href="#">Назад к сейфам</a></div>
 				</div>
 			</div>
-			<!-- start s-prod-head2-->
-			<div class="s-prod-head s-prod-head-basket">
+			<!-- start s-thanks-->
+			<div class="s-thanks" id="s-thanks">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-4 col-md-6">
-							<div class="s-prod-head-images">
-								<div class="s-prod-head-images__inner">
-									<div class="s-prod-head-images__slider s-prod-head-images__slider--lg s-prod-head-images__slider--lg-js">
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-									</div>
-									<!-- +e.slider--sm.--sm-js
-									// - for (var x = 0; x < 5; x++)
-										+e.slide
-											+e.img-wrap
-												+img()
-									-->
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<h1>Сейф Aiko T-17 EL</h1>
-							<div class="s-prod-head__type">Взломостойкий
-							</div>
-							<p> <strong>Характеристики</strong></p>
-							<table>
-												<tr>
-													<td>Размер (ВхШхГ):</td>
-													<td><strong>170х260х252 мм</strong></td>
-												</tr>
-												<tr>
-													<td>Внутренний размер (ВхШхГ):</td>
-													<td><strong>170х260х252 мм</strong></td>
-												</tr>
-												<tr>
-													<td>Замки:</td>
-													<td><strong>ключевой</strong></td>
-												</tr>
-												<tr>
-													<td>Вес:</td>
-													<td><strong>7,0 кг</strong></td>
-												</tr>
-												<tr>
-													<td>Объем:</td>
-													<td><strong>3,0 л</strong></td>
-												</tr>
-												<tr>
-													<td>Взломостойкость:</td>
-													<td><strong>S1 класс</strong></td>
-												</tr>
-							</table>
-						</div>
-						<div class="col-lg-4">
-							<div class="s-prod-head-sidebar">
-								<div class="s-prod-head-sidebar__number">
-									<button> </button>
-									<input type="text" placeholder="1"/>
-									<button> </button>
-								</div>
-								<div class="s-prod-head-sidebar__amount">2000 Р
-								</div>
-								<div class="s-prod-head-sidebar__remove">
-									<button> </button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row to-order justify-content-end">
-						<div class="col-lg-3 col-md-6">
-							<h5>Итого без доставки</h5>
-							<h3>2000 Р</h3>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="s-prod-head__checkout">
-								<button>Оформить заказ</button><a href="#">Доставка и оплата</a>
-							</div>
+						<div class="col after-quiz"><img class="lazy check-mark" src="#" data-src="img/svg/tick.svg" alt=""/>
+							<h2><span class="name">Иван</span>, мы отправили вам подборку сейфов,<br> подходящих под выбранные параметры.</h2>
+							<p>Скидку&nbsp;10% мы&nbsp;закрепили за&nbsp;вашим номером телефона,<br> она действительна в&nbsp;течение 2-х недель.</p><img class="lazy" src="#" data-src="img/@2x/thanks-safes.jpg" alt=""/>
+							<h5>Вы&nbsp;можете в&nbsp;любое время посмотреть сейфы на&nbsp;складе: <br>оценить размеры, попробовать закрыть и&nbsp;открыть замок, задать <br> вопросы&nbsp;&mdash; позвоните и&nbsp;договоритесь о&nbsp;встрече.</h5><a href="tel:+7(3519)22-00-22">+7 (3519) 22-00-22</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- end s-prod-head2-->
+			<!-- end s-thanks-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="row">
