--- a/public/15-step-3.html
+++ b/public/15-step-3.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Корзина с товаром</title>
+		<title>Оформление заказа</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no">
@@ -24,7 +24,8 @@
 		<link rel="stylesheet" href="libs/ion-rangeslider/css/ion.rangeSlider.min.css"/>
 		<link rel="stylesheet" href="css/main.min.css"/>
 	</head>
-	<body class="inner-page"><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
+	<!-- для отступов у h1-->
+	<body class="inner-page-2"><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
 		<div class="main-wrapper">
 			<!-- start HEADER.header-->
 			<header class="header block-with-lazy">
@@ -229,112 +230,96 @@
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Доставка и оплата</span>
+							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Корзина</span>
 									<meta itemprop="position" content="2"/></a></li>
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Взломостойкие сейфы</span>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Оформление заказа</span>
 									<meta itemprop="position" content="3"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Сейф Aiko T-17 EL</span>
-									<meta itemprop="position" content="4"/></a></li>
 						</ol>
 					</nav>
-					<!-- Стилизация находится в main рядом с breadcrumb-->
-					<div class="text-right back-to-main"> <a href="#">Назад к сейфам</a></div>
+					<div class="text-center">
+						<h1>Оформление заказа</h1>
+					</div>
 				</div>
 			</div>
-			<!-- start s-prod-head2-->
-			<div class="s-prod-head s-prod-head-basket">
+			<!-- start s-step3-->
+			<div class="s-step3" id="s-step3">
 				<div class="container">
-					<div class="row">
-						<div class="col-lg-4 col-md-6">
-							<div class="s-prod-head-images">
-								<div class="s-prod-head-images__inner">
-									<div class="s-prod-head-images__slider s-prod-head-images__slider--lg s-prod-head-images__slider--lg-js">
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-										<div class="s-prod-head-images__slide"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
-												<!-- возможно я не правильно убрал слайдер--></a>
-										</div>
-									</div>
-									<!-- +e.slider--sm.--sm-js
-									// - for (var x = 0; x < 5; x++)
-										+e.slide
-											+e.img-wrap
-												+img()
-									-->
-								</div>
-							</div>
+					<div class="order-steps row">
+						<div class="col-sm-4">
+							<h5 class="active text-center">Контактные данные</h5>
 						</div>
-						<div class="col-lg-4 col-md-6">
-							<h1>Сейф Aiko T-17 EL</h1>
-							<div class="s-prod-head__type">Взломостойкий
-							</div>
-							<p> <strong>Характеристики</strong></p>
-							<table>
-												<tr>
-													<td>Размер (ВхШхГ):</td>
-													<td><strong>170х260х252 мм</strong></td>
-												</tr>
-												<tr>
-													<td>Внутренний размер (ВхШхГ):</td>
-													<td><strong>170х260х252 мм</strong></td>
-												</tr>
-												<tr>
-													<td>Замки:</td>
-													<td><strong>ключевой</strong></td>
-												</tr>
-												<tr>
-													<td>Вес:</td>
-													<td><strong>7,0 кг</strong></td>
-												</tr>
-												<tr>
-													<td>Объем:</td>
-													<td><strong>3,0 л</strong></td>
-												</tr>
-												<tr>
-													<td>Взломостойкость:</td>
-													<td><strong>S1 класс</strong></td>
-												</tr>
-							</table>
+						<div class="col-sm-4">
+							<h5 class="text-center">Доставка и оплата</h5>
 						</div>
-						<div class="col-lg-4">
-							<div class="s-prod-head-sidebar">
-								<div class="s-prod-head-sidebar__number">
-									<button> </button>
-									<input type="text" placeholder="1"/>
-									<button> </button>
-								</div>
-								<div class="s-prod-head-sidebar__amount">2000 Р
-								</div>
-								<div class="s-prod-head-sidebar__remove">
-									<button> </button>
-								</div>
-							</div>
+						<div class="col-sm-4">
+							<h5 class="text-center">Подтверждение заказа</h5>
 						</div>
 					</div>
-					<div class="row to-order justify-content-end">
-						<div class="col-lg-3 col-md-6">
-							<h5>Итого без доставки</h5>
-							<h3>2000 Р</h3>
+					<div class="row">
+						<div class="final-data col-lg-4">
+							<div class="final-data__info-item">
+								<div class="h4">Контактная информация</div>
+								<p>Имя:<span>Анна</span></p>
+								<p>Фамилия:<span>Соколова</span></p>
+								<p>Телефон:<span>+ 7 911 111-11-11</span></p>
+								<p>Email:<span>hello@mail.ru</span></p><a href="#">Изменить</a>
+							</div>
+							<div class="final-data__info-item">
+								<div class="h4">Доставка</div>
+								<p>Тип:<span>Доставка до подъезда</span></p>
+								<p>Адрес:<span>Саратов, 50 Лет Октября пр., д.118, кв.124</span></p><a href="#">Изменить</a>
+							</div>
+							<div class="final-data__info-item">
+								<div class="h4">Способ оплаты</div>
+								<p><span>Банковской картой</span></p><a href="#">Изменить</a>
+							</div>
 						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="s-prod-head__checkout">
-								<button>Оформить заказ</button><a href="#">Доставка и оплата</a>
+						<div class="final-order col-lg-8">
+							<div class="you-order">
+								<div class="h4">Заказ</div><a href="">Изменить</a>
+							</div>
+							<div class="final-order__order-item row">
+								<div class="img-wrap col-sm-3"><img class="lazy" src="#" data-src="img/@2x/prod-1.jpg" alt=""/></div>
+								<div class="final-order__order-description col-sm-9">
+									<table>
+										<tr>
+											<td class="safe-name">Сейф Aiko T-17 EL</td>
+											<td>1 шт.</td>
+											<td>2 000 Р</td>
+										</tr>
+										<tr>
+											<td class="protection-class">Взломостойкий</td>
+										</tr>
+									</table>
+								</div>
+							</div>
+							<div class="final-order__final-price">
+								<table>
+									<tr>
+										<td>Сумма</td>
+										<td>2 000 Р</td>
+									</tr>
+									<tr>
+										<td>Доставка</td>
+										<td>700 Р</td>
+									</tr>
+									<tr>
+										<td>Итого</td>
+										<td>2 700 Р</td>
+									</tr>
+								</table>
+							</div>
+							<div class="form-wrap">
+								<button class="form-wrap__btn" type="submit">Подтвердить заказ
+								</button>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- end s-prod-head2-->
+			<!-- end s-step3-->
+			<!-- +s-form2()-->
+			<!-- +s-video-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="row">
