--- a/public/19-not-search.html
+++ b/public/19-not-search.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Поиск по назначению</title>
+		<title>Поиск</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no">
@@ -24,7 +24,7 @@
 		<link rel="stylesheet" href="libs/ion-rangeslider/css/ion.rangeSlider.min.css"/>
 		<link rel="stylesheet" href="css/main.min.css"/>
 	</head>
-	<body><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
+	<body class="inner-page"><!--[if lt IE 11]><p   class="browsehappy container">К сожалению, вы используете устаревший браузер. Пожалуйста, <a href="http://browsehappy.com/" target="_blank">обновите ваш браузер</a>, чтобы улучшить производительность, качество отображаемого материала и повысить безопасность.</p><![endif]-->
 		<div class="main-wrapper">
 			<!-- start HEADER.header-->
 			<header class="header block-with-lazy">
@@ -221,261 +221,124 @@
 					</div>
 				</div>
 				<!-- end top-nav-->
+				<div class="page-head">
+					<div class="container">
+						<nav aria-label="breadcrumb">
+							<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
+								<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
+										<meta itemprop="position" content="1"/></a></li>
+								<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Каталог </span>
+										<meta itemprop="position" content="2"/></a></li>
+								<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Поиск</span>
+										<meta itemprop="position" content="3"/></a></li>
+							</ol>
+						</nav>
+					</div>
+				</div>
+				<!-- .container+e.title-search Найдено <span class="text-primary fw-500">3 товара</span>
+				-->
 			</header>
 			<!-- end HEADER.header-->
-			<div class="page-head">
+			<!-- start s-error2-->
+			<div class="s-error not-found" id="s-error">
+				<div class="container text-center">
+					<h4>По&nbsp;вашему запросу &laquo;взломастойкие&raquo; ничего на&nbsp;найдено. Попробуйте еще раз.</h4>
+					<div class="form-search d-lg-block">
+						<form>
+							<input type="text" placeholder="Например: взломостойкие Aiko айко"/>
+							<button class="form-search__btn" type="button">
+								<svg class="icon icon-search ">
+									<use xlink:href="img/svg/sprite.svg#search"></use>
+								</svg>
+							</button>
+						</form>
+					</div>
+				</div>
+			</div>
+			<!-- end s-error2-->
+			<!-- start s-form2-->
+			<div class="s-form section block-with-lazy" id="s-form">
 				<div class="container">
-					<div class="page-head__title-search">Найдено <span class="text-primary fw-500">3 товара</span>
-					</div>
-				</div>
-			</div>
-			<div class="main-container container">
-				<div class="row">
-					<div class="col-xl-3 col-lg-4">
-						<button class="s-filter__btn s-filter__btn--js btn btn-block btn-primary d-lg-none mb-3 ttu" type="button"><strong class="d-none">Свернуть фильтр</strong><strong>Фильтр товаров  </strong></button>
-						<div class="s-filter-wrap d-lg-block">
-							<!-- start s-filter-->
-							<div class="s-filter"> 
-								<div class="s-filter__head h6 strong">Выберите сейф  по&nbsp;параметрам
-								</div>
-								<div class="s-filter__group">
-									<div class="s-filter__title showhide active">Цена
+					<div class="row">
+						<div class="col-lg-7 align-self-end">
+							<div class="s-form__img-wrap d-none d-lg-block"><img class="lazy res-i" src="#" data-src="img/@2x/man.png" alt=""/>
+								<div class="s-form__label">
+									<div class="s-form__label-name">Александр Сикерин
 									</div>
-									<div class="showhide-all">
-										<div class="range-wrap price_slider_amount">
-											<div class="row">
-												<label class="col-auto"> <input class="range-result range-result--minus minus form-control" type="text"/>
-												</label>
-												<label class="col-auto"> <input class="range-result range-result--plus plus form-control" type="text"/>
-												</label>
+									<div class="s-form__label-prof">руководитель 
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<h2>Нужна консультация в&nbsp;подборе сейфа?</h2>
+							<h5>Руководитель компании проконсультирует вас, ответит на&nbsp;все вопросы</h5>
+							<div class="form-wrap">
+								<form>
+									<input class="order" type="hidden" name="order" value="Получить каталог и прайс"/>
+									<div class="tabs">
+										<div class="form-wrap__group">
+											<div class="form-wrap__group-title">Как с вами связаться?
 											</div>
-											<input class="range-slider slider-js" type="text" data-min="1000" data-max="90000"/>
+											<div class="tabs__caption">
+												<div class="tabs__btn active">
+													<svg class="icon icon-tel ">
+														<use xlink:href="img/svg/sprite.svg#tel"></use>
+													</svg>Звонок 
+												</div>
+												<div class="tabs__btn">
+													<svg class="icon icon-viber ">
+														<use xlink:href="img/svg/sprite.svg#viber"></use>
+													</svg>Viber
+												</div>
+												<div class="tabs__btn">
+													<svg class="icon icon-whatsapp ">
+														<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+													</svg>WhatsApp
+												</div>
+											</div>
+										</div> 
+										<div class="tabs__wrap">
+											<div class="tabs__content active">
+												<div class="form-wrap__input-wrap form-group">
+													<label><span class="form-wrap__title">Введите телефон:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="tel" required="required"/>
+													</label>
+												</div>
+												<!-- +e.input-wrap-->
+											</div>
+											<div class="tabs__content">
+												<div class="form-wrap__input-wrap form-group">
+													<label><span class="form-wrap__title">Введите viber:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="viber"/>
+													</label>
+												</div>
+												<!-- +e.input-wrap-->
+											</div>
+											<div class="tabs__content">
+												<div class="form-wrap__input-wrap form-group">
+													<label><span class="form-wrap__title">Введите whatsapp:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="whatsapp"/>
+													</label>
+												</div>
+												<!-- +e.input-wrap-->
+											</div>
 										</div>
+										<div class="h5 text-secondar">Перезвоню в течение рабочего дня</div>
 									</div>
-								</div>
-								<!-- +e.group-->
-								<div class="s-filter__group">
-									<div class="s-filter__title showhide active">Тип замка
-									</div>
-									<div class="showhide-all">
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">Ключевой</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">Кодовый электронный</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">Кодовый механический</span>
-											</label>
-									</div>
-								</div>
-								<!-- +e.group-->
-								<div class="s-filter__group">
-									<div class="s-filter__title showhide active">Тип замка
-									</div>
-									<div class="showhide-all">
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">0 класс</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">1 класс</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">2 класс</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">3 класс</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">4 класс</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">5 класс</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">H0 класс</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">S1 класс</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">S2 класс</span>
-											</label>
-									</div>
-								</div>
-								<!-- +e.group-->
-								<div class="s-filter__group">
-									<div class="s-filter__title showhide active">Огнестойкость
-									</div>
-									<div class="showhide-all">
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">30 Б</span>
-											</label>
-											<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox"/><span class="custom-input__lab"></span><span class="custom-input__text">60 Б</span>
-											</label>
-									</div>
-								</div>
-								<!-- +e.group-->
-							</div>
-							<div class="sidebar-list">
-								<ul>
-									<li><img class="res-i" src="img/svg/shipped.svg" alt=""/>Доставка по&nbsp;Магнитогорску <strong>в&nbsp;день заказа</strong></li>
-									<li><img class="res-i" src="img/svg/guarantee.svg" alt=""/>Гарантия на&nbsp;сейф  <strong>5&nbsp;лет</strong>, на&nbsp;замки  <strong>1&nbsp;год</strong></li>
-								</ul>
-							</div>
-						</div>
-						<!-- end s-filter-->
-					</div>
-					<div class="col-xl-9 col-lg-8">
-						<!-- start s-catalog-->
-						<div class="s-catalog s-catalog--page"> 
-							<h1>Взломостойкие сейфы</h1>
-							<div class="sort-catalog"> 
-								<div class="row"> 
-									<div class="col-auto">Сортировать:    </div>
-									<div class="col-auto"> 
-										<label class="sort-input"><input class="sort-input__input" type="radio" name="sort"/><span class="sort-input__text">сначала дешевые    </span>
+									<div class="form-wrap__input-wrap form-group">
+										<label><span class="form-wrap__title">Как к вам обращаться?</span><input class="form-wrap__input form-control" type="text" placeholder="Иван" name="name" required="required"/>
 										</label>
 									</div>
-									<div class="col-auto"> 
-										<label class="sort-input"><input class="sort-input__input" type="radio" name="sort"/><span class="sort-input__text">сначала дорогие</span>
-										</label>
+									<!-- +e.input-wrap-->
+									<button class="form-wrap__btn" type="submit">Получить консультацию в&nbsp;подборе&nbsp;сейфа
+									</button>
+									<div class="form-wrap__polite text-secondary"> Нажимая на&nbsp;кнопку, вы&nbsp;даете согласие на&nbsp;обработку своих персональных данных и&nbsp;соглашаетесь с&nbsp;<a class="tdu text-secondary" href="privacy-policy.pdf" target="_blank">Политикой конфиденциальности</a>
 									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="s-catalog__col col-sm-6">
-									<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
-										<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
-										</div>
-										<table>
-											<tr>
-												<td>Цена:</td>
-												<td>2000 Р*</td>
-											</tr>
-											<tr>
-												<td>Взломостойкость:</td>
-												<td>H0 класс</td>
-											</tr>
-											<tr>
-												<td>Тип замка:</td>
-												<td>электронный</td>
-											</tr>
-											<tr>
-												<td>Внешние размеры: (ВхШхГ)</td>
-												<td>170х260х252</td>
-											</tr>
-										</table><a class="item-prod__btn" href="#">
-										<svg class="icon icon-cart ">
-											<use xlink:href="img/svg/sprite.svg#cart"></use>
-										</svg>В корзину</a>
-									</div>
-								</div>
-								<div class="s-catalog__col col-sm-6">
-									<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
-										<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
-										</div>
-										<table>
-											<tr>
-												<td>Цена:</td>
-												<td>2000 Р*</td>
-											</tr>
-											<tr>
-												<td>Взломостойкость:</td>
-												<td>H0 класс</td>
-											</tr>
-											<tr>
-												<td>Тип замка:</td>
-												<td>электронный</td>
-											</tr>
-											<tr>
-												<td>Внешние размеры: (ВхШхГ)</td>
-												<td>170х260х252</td>
-											</tr>
-										</table><a class="item-prod__btn" href="#">
-										<svg class="icon icon-cart ">
-											<use xlink:href="img/svg/sprite.svg#cart"></use>
-										</svg>В корзину</a>
-									</div>
-								</div>
-								<div class="s-catalog__col col-sm-6">
-									<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
-										<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
-										</div>
-										<table>
-											<tr>
-												<td>Цена:</td>
-												<td>2000 Р*</td>
-											</tr>
-											<tr>
-												<td>Взломостойкость:</td>
-												<td>H0 класс</td>
-											</tr>
-											<tr>
-												<td>Тип замка:</td>
-												<td>электронный</td>
-											</tr>
-											<tr>
-												<td>Внешние размеры: (ВхШхГ)</td>
-												<td>170х260х252</td>
-											</tr>
-										</table><a class="item-prod__btn" href="#">
-										<svg class="icon icon-cart ">
-											<use xlink:href="img/svg/sprite.svg#cart"></use>
-										</svg>В корзину</a>
-									</div>
-								</div>
-								<div class="s-catalog__col col-sm-6">
-									<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
-										<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
-										</div>
-										<table>
-											<tr>
-												<td>Цена:</td>
-												<td>2000 Р*</td>
-											</tr>
-											<tr>
-												<td>Взломостойкость:</td>
-												<td>H0 класс</td>
-											</tr>
-											<tr>
-												<td>Тип замка:</td>
-												<td>электронный</td>
-											</tr>
-											<tr>
-												<td>Внешние размеры: (ВхШхГ)</td>
-												<td>170х260х252</td>
-											</tr>
-										</table><a class="item-prod__btn" href="#">
-										<svg class="icon icon-cart ">
-											<use xlink:href="img/svg/sprite.svg#cart"></use>
-										</svg>В корзину</a>
-									</div>
-								</div>
-							</div>
-							<div class="s-catalog__footer">
-								<div class="s-catalog__footer-text s-catalog__footer-text---page text-center">*При оформлении заказа  уточняйте цену по&nbsp;т: <a href="tel:8(3519)22-00-22">8 (3519) 22-00-22</a>
-								</div>
-								<button class="s-catalog__btn-more" type="button">
-									<svg class="icon icon-refresh ">
-										<use xlink:href="img/svg/sprite.svg#refresh"></use>
-									</svg>Загрузить еще
-								</button>
-								<div class="pagination-wrapper">
-									<ul class="page-numbers">
-												<li><a class="page-numbers current" href="#">1  </a>
-												</li>
-												<li><a class="page-numbers" href="#">2 </a>
-												</li>
-												<li><a class="page-numbers" href="#"> 3 </a>
-												</li>
-												<li><a class="page-numbers" href="#">  4  </a>
-												</li>
-												<li><a class="page-numbers" href="#">  4 </a>
-												</li>
-												<li><a class="page-numbers" href="#">  5  </a>
-												</li>
-												<li><a class="page-numbers" href="#"> ... </a>
-												</li>
-												<li><a class="page-numbers" href="#">  10 </a>
-												</li>
-												<li><a class="page-numbers h6 mb-0" href="#">  Показать все</a>
-												</li>
-									</ul>
-								</div>
+								</form>
 							</div>
 						</div>
-						<!-- end s-catalog-->
 					</div>
 				</div>
 			</div>
+			<!-- end s-form-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="row">
