--- a/public/14-step-2.html
+++ b/public/14-step-2.html
@@ -295,10 +295,9 @@
 										</label>
 									</div>
 									<div>
-										<label class="metod-radio"><input class="metod-radio__input" type="radio" name="payment"/><span class="metod-radio__lab"></span><span class="metod-radio__title">Наличными</span>
+										<label class="metod-radio"><input class="metod-radio__input" type="radio" name="payment"/><span class="metod-radio__lab"></span><span class="metod-radio__title">Наличными</span><span class="attention">Только при покупке <br>из магазина</span>
 										</label>
 									</div>
-								<p class="attention">Только при покупке <br>из магазина</p>
 							</div>
 						</div>
 					</div>
