--- a/public/19-not-search.html
+++ b/public/19-not-search.html
@@ -245,7 +245,7 @@
 					<h4>По&nbsp;вашему запросу &laquo;взломастойкие&raquo; ничего на&nbsp;найдено. Попробуйте еще раз.</h4>
 					<div class="form-search d-lg-block">
 						<form>
-							<input type="text" placeholder="Например: взломостойкие Aiko айко"/>
+							<input type="text" placeholder="Поиск по названию или назначению"/>
 							<button class="form-search__btn" type="button">
 								<svg class="icon icon-search ">
 									<use xlink:href="img/svg/sprite.svg#search"></use>
