--- a/public/07-contacts.html
+++ b/public/07-contacts.html
@@ -304,7 +304,7 @@
 									<li>
 										 Работаем: <br><span>пн-пт, с 10:00 до 18:00</span><img class="lazy" src="#" data-src="img/svg/clock-circular-outline.svg" alt=""/></li>
 								</ul>
-							</div><iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" width="100%" height="578" frameborder="0"></iframe>
+							</div><iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" height="578"></iframe>
 						</div>
 					</div>
 				</div>
